added check boxes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       <div class="card">
         <div class="card-header">
           <h2>Generate a Password</h2>
+          <h3>   <ul id="checkBundle">
+            <li><label><input type="checkbox" id="checkUpper" />Uppercase</label>
+            <li><label><input type="checkbox" id="checkLower"/>Lowercase</label>
+            <li><label><input type="checkbox" id="checkNumber"/>Numeric Charaters</label>
+            <li><label><input type="checkbox" id="checkSpecial" />Special Charaters</label>
+         </ul></h3>
         </div>
         <div class="card-body">
           <textarea
