--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
             <li><label><input type="checkbox" id="checkLower"/>Lowercase</label>
             <li><label><input type="checkbox" id="checkNumber"/>Numeric Charaters</label>
             <li><label><input type="checkbox" id="checkSpecial" />Special Charaters</label>
-         </ul></h3>
+            <li> Choose any number between 8 to 128:
+              <input type="number" id="passLength" min="8" max="128">
+
+         </ul>
+        </h3>
         </div>
         <div class="card-body">
           <textarea
